Feature/#64 (#70)
* fix: swagen & qn & tpl-service bugs

* feat: tpl-service use query-normalizr(#64)

* feat:  user query-normalizr to json-server (#65)

* feat:  tpl-cra-redux PetTable (#68)

* feat(tpl-car-redux):  add PetTable (#68)

fix: yarn lock

* fix: build order
