# packages/tpl-service/src/api/pet.js
@@ -10,11 +10,7 @@ export default class API {
   bind(router) {
     const listPets = async ctx => {
       const req = {
-        query: {
-          _limit: ctx.query._limit,
-          tag: ctx.query.tag,
-          age_gt: ctx.query.age_gt,
-        },
+        query: ctx.normalizedQuery || {},
         context: ctx, // here we put koa context in request
       };
 
@@ -22,8 +18,8 @@ export default class API {
 
       if (!res.body) throw createError(500, "should have body in response");
 
-      if (!res.headers || res.headers.xNext === undefined)
-        throw createError(500, "should have header x-next in response");
+      if (!res.headers || res.headers.xTotalCount === undefined)
+        throw createError(500, "should have header X-Total-Count in response");
 
       ctx.body = res.body;
       ctx.set("X-Total-Count", res.headers.xTotalCount);
@@ -62,10 +58,11 @@ export default class API {
     };
 
     const deletePet = async ctx => {
-      if (!ctx.params.id) throw createError(400, "id in path is required.");
+      if (!ctx.params.petId)
+        throw createError(400, "petId in path is required.");
 
       const req = {
-        id: ctx.params.id,
+        petId: ctx.params.petId,
         context: ctx, // here we put koa context in request
       };
 
